# bnd-garage-client

./: .gitignore  README.md  RPC_CATALOG.md  pyproject.toml
src/bnd_garage_client/: __init__.py  client.py  const.py  crypto.py  errors.py  models.py  pairing.py  sdk_client.py  sdk_protocol.py  transport.py
tests/: test_client.py  test_crypto.py  test_models.py  test_pairing.py  test_sdk_client.py
