[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bnd-garage-client"
version = "0.1.0"
description = "Async client for B&D SmartDoorDevices garage hubs"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Hayden" }]
keywords = ["home-assistant", "garage-door", "bnd", "smartdoordevices"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/haids3/bnd-garage-client"
Repository = "https://github.com/haids3/bnd-garage-client"
Issues = "https://github.com/haids3/bnd-garage-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bnd_garage_client"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
